--- a/css/history.css
+++ b/css/history.css
@@ -4,5 +4,21 @@
 #history-map {
   width: 100%;
   height: 400px;
-  border: 1px solid #999999;
+  border: 1px solid #E1E1E8;
+  
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.icon-geolocate {
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  line-height: 14px;
+  vertical-align: text-top;
+  background-image: url("img/icon-geolocate.png");
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
 }
