--- a/css/history.css
+++ b/css/history.css
@@ -3,13 +3,10 @@
  */
 #history-map {
   width: 100%;
-  height: 400px;
-  border: 1px solid #E1E1E8;
-  
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
+  height: 100%;
+  position: absolute;
+  top: 35px;
+  right: 0;
 }
 
 .icon-geolocate {
