--- a/css/history.css
+++ b/css/history.css
@@ -1,12 +1,17 @@
 /**
  * Main CSS for History Near Me application
  */
+a:visited {
+  color: #08C;
+}
+ 
 #history-map {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 35px;
   right: 0;
+  z-index: -10;
 }
 
 .icon-geolocate {
