--- a/css/history.css
+++ b/css/history.css
@@ -15,9 +15,15 @@ a:visited {
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 35px;
+  top: 0;
   right: 0;
+  bottom: 0;
+  left: 0;
   z-index: -10;
+}
+
+.leaflet-top {
+  top: 40px;
 }
 
 .icon-geolocate {
@@ -38,10 +44,28 @@ a:visited {
   width: 50%;
 }
 
+.alert {
+  z-index: 50;
+  margin-top: 70px;
+  -webkit-box-shadow: 0 8px 6px -6px #666666;
+  -moz-box-shadow: 0 8px 6px -6px #666666;
+  box-shadow: 0 8px 6px -6px #666666;
+}
+.alert + .alert {
+  margin-top: 1.5em;
+}
+
+.loading-placeholder.loading {
+  background: transparent url("img/loading.gif") top left no-repeat;
+  height: 20px;
+  width: 20px;
+  margin: 10px 10px 11px;
+}
+
+
 
 @media all and (max-width: 767px) {
-
-  #history-map {
+  .leaflet-top {
     top: 45px;
   }
   input[class*="span"], select[class*="span"], textarea[class*="span"], .uneditable-input {
@@ -55,5 +79,12 @@ a:visited {
     top: 10px;
     max-height: 380px;
     overflow: scroll;
+  }
+}
+
+@media all and (min-width: 767px) {
+  .alert {
+    margin-right: 1em;
+    margin-left: 1em;
   }
 }
