--- a/css/history.css
+++ b/css/history.css
@@ -62,6 +62,26 @@ a:visited {
   margin: 10px 10px 11px;
 }
 
+.directions-container {
+  padding: 5px;
+  background: rgb(100, 100, 100);
+  background: rgba(0, 0, 0, 0.25);
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+  border-radius: 7px;
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+  z-index: 50;
+}
+.directions-container .directions.closed {
+  background-image: url("img/walkingtour-no-marker.png");
+  background-position: 0 -9px;
+  background-repeat: no-repeat;
+  width: 25px;
+  height: 25px;
+}
+
 
 
 @media all and (max-width: 767px) {
