--- a/css/history.css
+++ b/css/history.css
@@ -74,12 +74,25 @@ a:visited {
   right: 10px;
   z-index: 50;
 }
+.directions-container .directions {
+  padding: 5px;
+}
 .directions-container .directions.closed {
   background-image: url("img/walkingtour-no-marker.png");
   background-position: 0 -9px;
   background-repeat: no-repeat;
   width: 25px;
   height: 25px;
+}
+.directions-container .directions.closed * {
+  display: none;
+}
+.directions-container .directions.opened {
+  width: 400px;
+  max-height: 80%;
+  overflow: scroll;
+  background: #EEEEEE;
+  background: rgba(255, 255, 255, 0.75);
 }
 
 
